--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "start:prod": "SET NODE_ENV=production&&nodemon server.js",
     "debug": "SET NODE_ENV=production&&ndb server.js",
     "watch:js": "parcel watch --no-hmr ./public/js/index.js --out-dir ./public/js --out-file bundle.js  --public-url /js",
@@ -17,6 +18,7 @@
     "axios": "^1.6.8",
     "babel": "^6.23.0",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
@@ -50,5 +52,10 @@
     "nodemon": "^3.1.0",
     "parcel-bundler": "^1.12.5",
     "prettier": "^3.2.5"
+  }, 
+  
+    "engines": {
+      "node": ">=10.0.0"
+    }
   }
-}
+
