--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "mongoose": "^5.13.22",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "netlify-cli": "^17.23.1",
+    "netlify-lambda": "^2.0.16",
     "nodemailer": "^6.9.13",
     "parsel": "^0.3.0",
     "pug": "^3.0.2",
+    "serverless-http": "^3.2.0",
     "sharp": "^0.33.3",
     "slugify": "^1.6.6",
     "stripe": "^15.5.0",
@@ -52,10 +55,8 @@
     "nodemon": "^3.1.0",
     "parcel-bundler": "^1.12.5",
     "prettier": "^3.2.5"
-  }, 
-  
-    "engines": {
-      "node": ">=10.0.0"
-    }
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
-
+}
