--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "multer": "^1.4.5-lts.1",
     "netlify-cli": "^17.23.1",
     "netlify-lambda": "^2.0.16",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.13",
     "parsel": "^0.3.0",
     "pug": "^3.0.2",
